Добавлены SEO-оптимизации: sitemap.xml, robots.txt и мета-теги

--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Алекс Транс - Транспортно-логистическая компания</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Алекс Транс - Транспортно-логистическая компания | Междугородние и международные перевозки</title>
+    <meta name="title" content="Алекс Транс - Транспортно-логистическая компания | Междугородние и международные перевозки">
+    <meta name="description" content="Профессиональные грузоперевозки по России и СНГ. Междугородние и международные перевозки, сборные грузы, экспресс-доставка. Гарантия сохранности груза.">
+    <meta name="keywords" content="грузоперевозки, транспортная компания, междугородние перевозки, международные перевозки, логистика, доставка грузов">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://a-t-group.ru/">
+    <meta property="og:title" content="Алекс Транс - Транспортно-логистическая компания">
+    <meta property="og:description" content="Профессиональные грузоперевозки по России и СНГ. Междугородние и международные перевозки, сборные грузы, экспресс-доставка.">
+    <meta property="og:image" content="https://a-t-group.ru/logo.svg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://a-t-group.ru/">
+    <meta property="twitter:title" content="Алекс Транс - Транспортно-логистическая компания">
+    <meta property="twitter:description" content="Профессиональные грузоперевозки по России и СНГ. Междугородние и международные перевозки, сборные грузы, экспресс-доставка.">
+    <meta property="twitter:image" content="https://a-t-group.ru/logo.svg">
+
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Алекс Транс",
+      "url": "https://a-t-group.ru",
+      "logo": "https://a-t-group.ru/logo.svg",
+      "description": "Профессиональные грузоперевозки по России и СНГ",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "RU"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+7-XXX-XXX-XX-XX",
+        "contactType": "customer service"
+      },
+      "sameAs": [
+        "https://vk.com/alex_trans",
+        "https://t.me/alex_trans"
+      ]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
